# bloom-filter

./: CMakeLists.txt  Dockerfile  README.md
cmake/: BloomFilterConfig.cmake.in
include/: MurmurHash3.h  bloom_filter.hpp  bloom_filter_c.h
src/: MurmurHash3.cpp  bloom_filter_c.cpp
tests/: test_bloom.cpp
wrappers/python/: bloom_filter.py
